# DB_Assistant

./: .gitignore  ANALYSIS_SUMMARY.md  COMPREHENSIVE_TEST_QUERIES.md  IMPROVEMENT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  README_TEST_QUERIES.md  VISUAL_SUMMARY.txt  comprehensive_test_suite.py  db_assistant.py  requirements.txt  test_queries.py  test_report_20260119_165533.json  test_report_20260119_171104.json  test_report_20260119_171744.json
Backend/: .env.example  README.md  pyproject.toml  requirements.txt  validate_queries.py
Backend/chroma_cache/: chroma.sqlite3
Backend/chroma_sessions/: chroma.sqlite3
Backend/src/: main.py
Backend/src/api/: dependencies.py
Backend/src/api/routes/: chat.py  health.py
Backend/src/config/: settings.py
Backend/src/core/: __init__.py  exceptions.py  query_validator.py  security.py
Backend/src/models/: requests.py  responses.py
Backend/src/schemas/: dynamic_schema.py
Backend/src/services/: cache_service.py  chat_service.py  db_service.py  llm_service.py  schema_service.py  session_service.py
Backend/src/utils/: __init__.py  language_detection.py  sql_cleaner.py
Backend/tests/: test_api.py  test_query_validator.py  test_security.py
Backend_New/app/api/routes/: chat.py
Backend_New/app/core/: column_restrictions.py
Backend_New/app/services/: agent_nodes.py  sql_agent.py
Frontend/: README.md  app.js
