[tool]
name = "Backend"
version = "0.1.0"
description = "A flexible FastAPI backend project for dynamic database management."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
databases = "^0.5.5"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.19.0"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"